--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+<title>Hey</title>
+<head>
+  <h1>Head</h1>
+</head>
+<body>
+  <h5>bodyyyy</h5>
+</body>
+</html>
